<resources>
    <string name="app_name">GoOtoor</string>
    <string name="pseudo">Pseudo</string>
    <string name="anonyme">Guest</string>
    <string name="password">Password</string>
    <string name="lostPassword">Forgotten?</string>
    <string name="signin">Sign in</string>
    <string name="signup">New on GoOtoor? Open an account</string>
    <string name="connectToPress">Connect to GoOtoor</string>
    <string name="errorLogin">Error, login is empty</string>
    <string name="errorPassword">Error, password is empty</string>
    <string name="lang">us</string>
    <string name="errorConnection">Internet Connection not Available!</string>
    <string name="errorUpdateTrans">Impossible to update the transaction</string>
    <string name="errorAddTrans">Impossible to add the transaction</string>
    <string name="impossibleDeldPr">impossible to delete the product</string>
    <string name="impossibleDelCard">impossible to delete the card</string>
    <string name="impossibleDeldMes">impossible to delete the message</string>
    <string name="errorAddOperat">Impossible to add the operation</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="historical">Historical</string>
    <string name="mylist">My items</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="tapALoc">Tap a location</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="myCB">My credit card</string>
    <string name="mySubscrit">My subscription</string>
    <string name="editProfil">Edit my profil</string>
    <string name="runTransac">Transactions list</string>
    <string name="connectInfo">Connection information</string>
    <string name="termsOfUse">Terms of use</string>
    <string name="star">stars</string>
    <string name="TapAProd">Tap a product</string>
    <string name="seeOtherProduct">See others products</string>
    <string name="save">Save</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="comment">comment</string>
    <string name="availableTime">Available time</string>
    <string name="state">Product state :</string>
    <string name="allowExch">Sharing possible (no remuneration)?</string>
    <string name="findOnMap">Find on the map</string>
    <string name="myPosition">My position</string>
    <string name="ErrorDescription">Incorrect description</string>
    <string name="ErrorPrice">Invalid price</string>
    <string name="exchangeBuy">Business</string>
    <string name="validerTransact">Validate the transaction</string>
    <string name="ErrorGeolocation">Error of geolocation</string>
    <string name="buy">Buy</string>
    <string name="exchange">Exchange</string>
    <string name="done">Done</string>
    <string name="product">Product</string>
    <string name="userNote">User\'s note :</string>
    <string name="errorTypeTrans">You have to choose the type of transaction!</string>
    <string name="errorContactSeller">Contact the seller</string>
    <string name="cancel">Cancel</string>
    <string name="errorBalanceTrans">Your balance is insufficient to perform a transaction..!</string>
    <string name="emailSender">From :</string>
    <string name="theProduct">The product :</string>
    <string name="hastobechosen">has to be selected for a</string>
    <string name="customerFor">Contact him for further information and to determine an appointment.</string>
    <string name="transactExpire">The transaction is valid until</string>
    <string name="myNotif">My notifications</string>
    <string name="message">Message</string>
    <string name="wording">Wording</string>
    <string name="amount">Amount</string>
    <string name="seller">Seller</string>
    <string name="customer">Customer</string>
    <string name="errorAcceptReject">You did not accept or reject the transaction</string>
    <string name="errorEndedTrans">Warning you are going to complete the transaction. Make sure you have received your product before validating.</string>
    <string name="buyConfirmed">The customer confirmed the purchase of the product</string>
    <string name="sell">Sell</string>
    <string name="buyCanceled">The customer canceled the purchase of the product</string>
    <string name="exchangeConfirmed">The customer confirmed the exchange of the product</string>
    <string name="exchangeCanceled">The customer canceled the exchange of the product</string>
    <string name="mail">Mail</string>
    <string name="nickName">Nickmane</string>
    <string name="surname">Surename</string>
    <string name="adresse">An address</string>
    <string name="zipCode">Zip code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="errorMail">Error, mail incorrect</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="subscribe">Subscribe</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="balance">Balance</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="commission">Commission</string>
    <string name="refund">Refund</string>
    <string name="confirmSubsWithDepot">Confirm subscription with a deposit of $10</string>
    <string name="confirmSubs">Confirm subscription</string>
    <string name="confirmTermin">Confirm termination</string>
    <string name="subscribeSubs">Subscribe subscription</string>
    <string name="cancelSubs">Cancel subscription</string>
    <string name="subscriptionHas">Your subscription has been</string>
    <string name="canceled">The customer canceled the purchase of the product.</string>
    <string name="confirmed">Confirmed</string>
    <string name="creditCard">Credit card</string>
    <string name="addCreditCard">Add a credit card</string>
    <string name="confirmPayment">Confirm your payment</string>
    <string name="confirmWithdrawal">Confirm your withdrawal</string>
    <string name="errorMinimumBal">Your minimum balance must be :</string>
    <string name="OneTimeDepo">One time deposit</string>
    <string name="paymentMade">Your payment has been made</string>
    <string name="OneTimeWithd">One-time withdrawal</string>
    <string name="OneTimeRefund">One-time refund</string>
    <string name="withdrawalMade">Your withdrawal was made</string>
    <string name="oldPass">Old password</string>
    <string name="enterEmail">Enter the email</string>
    <string name="newPass">New password</string>
    <string name="checkPass">Check the password</string>
    <string name="errorNewPassword">Error, New password is empty</string>
    <string name="errorCheckPassword">Error, checked password is empty</string>
    <string name="loginPassword">Error, login / password</string>
    <string name="errorOldPassword">Error, Old password is empty</string>
    <string name="emailPassword">Beware a email has been sent in your box to the letters. Check your spam folder if you do not find the email</string>
    <string name="infoCB">Your bank details are encrypted securely.</string>
    <string name="delete">Delete</string>
    <string name="deleteRow">Do you want to delete the row?</string>
    <string name="makeYourChoice">Make your choice</string>
    <string name="defaultCB">Set as default credit card</string>
    <string name="deleteCB">Delete the credit card</string>
    <string name="typeOfPay">Type of payment card</string>
    <string name="CBNumber">Credit card number</string>
    <string name="expiryDate">Expiry date (mm/yy)</string>
    <string name="errorCardType">Error card type</string>
    <string name="errorCardNumber">Error card number</string>
    <string name="errorExpiryDate">Error expiry date</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackMess">Thank you for your suggestions. Thanks to you, we can make improvements conceive</string>
    <string name="send">Send</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="help_with_index">Help (%1$d/%2$d)</string>
    <string name="emptyMessage">Empty message</string>
    <string name="takePicture">Take a picture</string>
    <string name="library">Gallery photos</string>
    <string name="cameraPhoto">Camera photo</string>
    <string name="NumeroProjet">837352901628</string>
    <string name="errorToken">Erasing error, please try back !</string>
    <string name="impossibleDelCre">impossible to delete the time slot</string>
    <string name="addtimeslot">Add times slots</string>
    <string name="dateDebut">Start date</string>
    <string name="dateFin">Due date</string>
    <string name="repeat">Repeat</string>
    <string name="timeslot">Manage time slots</string>
    <string name="none">None</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="dateError">Upper or lower date</string>
    <string name="sameday">The day must be the same for a daily or weekly period</string>
    <string name="overLapSlot">Be Careful overlapping of  time slots</string>
    <string name="firstCon">You must log in for the first time by pseudo / password.</string>
    <string name="touchIDFai">Authentication Failed</string>
    <string name="authFingerPrint">Please enable the fingerprint permission</string>
    <string name="setupFingerPrint">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="lockscreenFingerP">Please enable lockscreen security in your device\'s Settings</string>
</resources>
