

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/IBAbonnerBackgr"
    tools:context="com.prv.gootoor.activities.AbonnerActivity">


    <include
        layout="@layout/abonner_toolbar"
        android:layout_width="0dp"
        android:layout_height="59dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/include" />



    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="370dp"
        android:layout_height="258dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
                android:id="@+id/IBLabAboBalance"
                android:text="@string/balance"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
                android:text=": 230 €"
                android:id="@+id/IBBalance"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/IBLabelWithdraw"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/IBWithdrawal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/withdrawal"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/IBButtonWithdr"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:onClick="actionWithdrawal"
                android:text="@string/done" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/IBLabelDeposit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/IBDeposit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deposit"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/IBButtonDeposit"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:onClick="actionDeposit"
                android:text="@string/done" />


        </LinearLayout>


        <Button
            android:id="@+id/IBButtonSubUnsub"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:onClick="actionSubUnsub"
            android:text="@string/subscribe" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:id="@+id/IBLabOpeDate"
            android:text="@string/date"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:id="@+id/IBLabOpeType"
            android:text="@string/type"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/amount"
            android:id="@+id/IBLabOpeAmount"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:id="@+id/IBLabOpeWording"
            android:text="@string/wording"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>


    <ListView
        android:id="@+id/IBAbonnerListView"
        android:layout_width="373dp"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>
