

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/IBListCrenBackgr"
    tools:context="com.prv.gootoor.activities.ListCreneauxActivity">


    <include
        layout="@layout/list_creneaux_toolbar"
        android:layout_width="0dp"
        android:layout_height="59dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/include" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="left|center"
            android:id="@+id/IBEntDateDebut"
            android:text="@string/dateDebut"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="left|center"
            android:id="@+id/IBEntDateFin"
            android:text="@string/dateFin"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="left|center"
            android:id="@+id/IBEntTapAloc"
            android:text="@string/tapALoc"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:gravity="left|center"
            android:id="@+id/IBEntRepeat"
            android:text="@string/repeat"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>



    <ListView
        android:id="@+id/IBListCreneauxView"
        android:layout_width="wrap_content"
        android:layout_height="480dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"/>


</android.support.constraint.ConstraintLayout>
