

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.prv.gootoor.activities.fragments.ListProductFragment">


<include
    layout="@layout/list_toolbar"
    android:layout_width="0dp"
    android:layout_height="59dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    android:id="@+id/include" />


<!-- TODO: Update blank fragment layout -->

    <ListView
        android:id="@+id/IBListListView"
        android:layout_width="375dp"
        android:layout_height="445dp"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/IBListAddProduct"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@drawable/addbutton"
        app:borderWidth="0dp"
        app:backgroundTint="#FF0000"
        android:layout_marginEnd="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/IBListListView"
        android:layout_marginBottom="71dp"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="@+id/IBListListView" />


    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IBListListView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/IBListProd"
            style="@style/TabButtonSelec"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/list" />

        <Button
            android:id="@+id/IBMesListProd"
            style="@style/TabButton"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/mylist" />

        <Button
            android:id="@+id/IBHistProd"
            style="@style/TabButton"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/historical" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
